--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,15 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.logoLoja {
+  background-image: url('/logo.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 250px;
+  height: 80px;
+  margin: 10px auto;
+  border-radius: 10px;
+  border: 1px solid gray;
+}
