--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,9 @@ body {
   border-radius: 10px;
   border: 1px solid gray;
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    padding-bottom: 100px;
+  }
+}
